Bug 1305378 - Check texture is valid before creating a render target, r=mattwoodrow,mtseng

MozReview-Commit-ID: L4ruAMEDN9z

--HG--
extra : rebase_source : b2170a7cb0528ebfaf8a90e0cb2387ed70b28ddc